--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -125,3 +125,17 @@ article footer .fas:hover {
 .red {
   color: red;
 }
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .design1 {
+    display: flex;
+    /* flex-direction: column; */
+  }
+  .main-header {
+    margin: 60px 20px 20px 20px;
+  }
+  main {
+    margin: 15px 20px;
+  }
+}
