--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,123 +14,36 @@ html {
  * Global layout stuff
  */
 
- /*
-Source Sans Pro font should apply to everything in the body(Note: the Bungee font should apply to the Tweeter logo in the nav).
- */
-body {
+ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif;
 }
-
-form {
-  padding-top: 20px;
-}
-
-label {
-  font-size: 20px;
-  font-weight:bold;
-}
-
-main {
-  /* padding-left: 1.5em;
-  padding-right: 1.5em; */
-  width: 90%; /* 90% of the width of its parent element */
-  /* position: center; */
-  margin: 0 auto; /* centered aligned to the body */
-  /* border: 1px solid red; */
-  background-color: #f4f1ec; /* the same background colour as the <body> element */
-}
-
-.error-hidden {
-  display: none;
-  color: red;
-  text-align: center;
-  border: solid purple 5px;
-  margin-top: 10px;
-}
-
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-article.new-tweet {
-  border: solid #545149 3px;
-  margin: 12px 0;
-  padding: 0 12px;
+ 
+ /* Source Sans Pro font applies to everything in the body (Note: the Bungee font applies to the Tweeter logo in the nav) */
+ 
+body {
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* HEADER STYLING */
-article.new-tweet header {
-  margin-top: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+main {
+  width: 90%; /* 90% of the width of its parent element */
+  margin: 0 auto; /* centered aligned to the body */
+  background-color: #f4f1ec; /* the same background colour as the <body> element */
 }
-
-article header {
-
-}
-
-article header img {
-  width: 50px;
-  height: 50px;
-}
-
-article #tweet-user {
-  display: flex;
-  align-items: center;
-}
-
-article #tweet-user .username {
-  margin-left: 8px;
-}
-
-#handle {
-  color: grey;
-  margin: 8px;
-}
-/* END HEADER STYLING */
-
-article:hover {
-  box-shadow: 10px 5px 5px gray;
-}
-
-/* TWEET BODY */
-article .inputtext {
-  
-}
-/* END TWEET BODY */
-
-/* TWEET FOOTER */
-article footer {
-  font-size: 60%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  border-top: 3px solid black;
-
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-article footer .fas:hover {
-  color: purple;
-}
-/* END TWEET FOOTER */
 
 .red {
   color: red;
 }
 
-
 @media (min-width: 768px) and (max-width: 1024px) {
   .design1 {
     display: flex;
-    /* flex-direction: column; */
   }
   .main-header {
     margin: 60px 20px 20px 20px;
