--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,7 +8,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* z-index: 1;  to give higher index to the front element */
   position:static;
   top:fixed;
   width:initial;
@@ -18,11 +17,19 @@ nav span {
   font-family: Bungee;
 }
 
+nav .fas {
+  color: red;
+}
+
 .right-of-nav {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: smaller;
+}
+
+.right-of-nav p {
+  margin-bottom: 3px;
 }
 
 @media (max-width: 768px) {
